// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCropper should match snapshots with multiple conditions 1`] = `
<Fragment>
  <div
    className="r1w7eao ijux3vr"
  >
    <div
      className="i1t60mxn"
    >
      <div
        className="i1etjuud"
      >
        <div
          className="ithkr7g"
        >
          <h5>
            Crop Image
          </h5>
          <f
            circularCrop={false}
            className="iimbv3e"
            crop={
              Object {
                "aspect": 1.7777777777777777,
                "height": undefined,
                "unit": "%",
                "width": 50,
              }
            }
            disabled={false}
            imageAlt=""
            keepSelection={false}
            locked={false}
            minHeight={0}
            minWidth={0}
            onChange={[Function]}
            onComplete={[Function]}
            onDragEnd={[Function]}
            onDragStart={[Function]}
            onImageError={[Function]}
            onImageLoaded={[Function]}
            ruleOfThirds={true}
            src=""
          />
        </div>
        <div
          className="imzsvjg"
        >
          <h5>
            Preview
          </h5>
        </div>
      </div>
      <div
        className="i1a42q3a"
      >
        <button
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
        <button
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Crop
        </button>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`ImageCropper should match snapshots with multiple conditions 2`] = `
<Fragment>
  <div>
    <div
      afterLoadedImage={[Function]}
      croppedImage=""
      key=".0"
    >
      value
    </div>
  </div>
</Fragment>
`;

exports[`ImageCropperWithInput should match snapshots with multiple conditions 1`] = `
<ImageCropper
  aspect={1.7777777777777777}
  croppedImage={null}
  onClose={[Function]}
  onCropClick={[Function]}
  setCroppedImage={[Function]}
  setUpImg={[Function]}
  setVisible={[Function]}
  upImg=""
  visible={false}
>
  <input
    labelText="input image"
    name="inputImage"
  />
</ImageCropper>
`;

exports[`ImageCropperWithInput should match snapshots with multiple conditions 2`] = `
<ImageCropper
  croppedImage={null}
  onClose={[Function]}
  onCropClick={[Function]}
  setCroppedImage={[Function]}
  setUpImg={[Function]}
  setVisible={[Function]}
  upImg=""
  visible={false}
>
  <input
    labelText="input image"
    name="inputImage"
  />
</ImageCropper>
`;

exports[`renderChildrenWithProps should match snapshots with multiple conditions 1`] = `
<div>
  <div>
    <div
      key=".$1"
      value="value"
    >
      1
    </div>
    <div
      key=".$2"
      value="value"
    >
      2
    </div>
  </div>
</div>
`;

exports[`renderChildrenWithProps should match snapshots with multiple conditions 2`] = `<div />`;
